# gridflux

./: .gitignore  CMakeLists.txt  README.md  gridflux  install.sh  uninstall.sh
src/: X11_session.c  X11_session.h  arrange.c  arrange.h  atoms.c  atoms.h  ewmh.c  ewmh.h  gridflux.c  gridflux.h  littlewin.h  main.c  x_session.c  x_session.h  xsession.c  xsession.h  xwm.c
